# robp-group7-sleepy

./: .gitignore  .gitmodules  colcon.ignore  documentation.txt  exclude_topics  include_topics  map.txt  out.txt  saved_grid.npy  saved_grid_explore.npy  saved_grid_path.npy
bags/hampustest/: metadata.yaml
bags/rosbag2_2025_02_04-17_53_24/: metadata.yaml  rosbag2_2025_02_04-17_53_24_0.mcap
bags/rosbag2_2025_02_11-15_51_00/: metadata.yaml
bags/test1/: metadata.yaml
bags/test2/: metadata.yaml  test2_0.mcap
icp_data/: metadata.yaml
install/: local_setup.sh  setup.sh
install/arm_control/lib/arm_control/: move_arm_hardcoded
install/arm_control/share/arm_control/: package.dsv  package.ps1  package.sh  package.xml
install/arm_servos_pubs_subs/share/arm_servos_pubs_subs/: package.sh  package.xml
install/core_interfaces/share/core_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/core_launch/share/core_launch/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/drive_base_msgs/share/drive_base_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/lidar_processing/lib/lidar_processing/: lidar_processing
install/lidar_processing/share/lidar_processing/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/micro_ros_agent/lib/: libmicroxrcedds_agent.so.2.4.3
install/micro_ros_agent/lib/micro_ros_agent/: micro_ros_agent
install/micro_ros_agent/share/micro_ros_agent/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/micro_ros_msgs/share/micro_ros_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/micro_ros_setup/lib/micro_ros_setup/: build_agent.sh  (+9 more)
log/: latest_build  latest_list
odometry_test/: metadata.yaml
rosbag2_2025_02_11-16_31_59/: metadata.yaml  rosbag2_2025_02_11-16_31_59_0.mcap
src/: frames_2025-02-03_15.43.20.gv
src/core/arm_control/: package.xml  setup.py
src/core/core_interfaces/: CMakeLists.txt
src/core/core_interfaces/action/: MoveTo.action  MoveToPickup.action
src/core/core_interfaces/msg/: DetectedMsg.msg  PointcloudDetectedObj.msg  YoloClassifiedObject.msg
src/core/core_interfaces/srv/: CameraDetect.srv  GridCreator.srv  LidarDetect.srv  LidarlikeFromCamera.srv  MoveArm.srv  MoveTo.srv  MoveToObject.srv  PointcloudDetect.srv  YoloImageDetect.srv
src/core/core_launch/: package.xml  setup.cfg  setup.py
src/core/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/core/lidar_processing/: package.xml  setup.py
src/core/log/: latest_build
src/core/mapping/: package.xml  setup.cfg  setup.py
src/core/navigation/: package.xml  setup.py
src/core/odometry/: package.xml  setup.py
src/core/perception/: package.xml  setup.py
src/core/simple_move/: package.xml  setup.py
src/core/yolo_detection/: package.xml  setup.cfg  setup.py
src/robp_robot/: .gitignore
src/robp_robot/robp_phidgets/robp_phidgets_encoders/: CMakeLists.txt
test/: metadata.yaml
test2/: metadata.yaml
util/: find_realsense.sh
yolo/: count_distance.py  justfortest_candelete.py  remind me.txt  requiredmap.tsv  requiredmap_exploration_2.tsv
(+625 files in other folders)
